# cookiecutter-tdsp

./: .pre-commit-config.yaml  README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.sh  pre_gen_project.sh
{{cookiecutter.__package_name}}/: .pre-commit-config.yaml  README.md  pyproject.toml
{{cookiecutter.__package_name}}/data/: README.md
{{cookiecutter.__package_name}}/docs/: README.md
{{cookiecutter.__package_name}}/docs/03_data/: data_definition.md  data_summary_report.md
{{cookiecutter.__package_name}}/docs/04_modeling/: final_model_report.md
{{cookiecutter.__package_name}}/docs/04_modeling/models/: model_1.md
{{cookiecutter.__package_name}}/docs/acceptance/: project_exit_report.md
{{cookiecutter.__package_name}}/docs/business_understanding/: project_charter.md
{{cookiecutter.__package_name}}/src/{{cookiecutter.__package_name}}/: __init__.py
{{cookiecutter.__package_name}}/tests/: __init__.py  test_{{cookiecutter.__package_name}}.py
{{cookiecutter.__package_name}}/tests/data_validation/: __init__.py
{{cookiecutter.__package_name}}/tests/unit/: __init__.py  test_{{cookiecutter.__package_name}}.py
