[tool.poetry]
name = "{{cookiecutter.__package_name}}"
version = "0.0.0"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.authors}}"]
license = "{{cookiecutter.license}}"
readme = "README.md"
packages = [{include = "{{cookiecutter.__package_name}}", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pydocstyle]
convention= "pep257"

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true

[tool.black]
line-length = 120

[tool.pylint]
disable = ["missing-module-docstring"]

[tool.pylint.format]
max-line-length = 120

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
show_error_codes = true
warn_return_any = true
warn_unused_ignores = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.bandit]
skips = []

[tool.coverage.run]
branch = true
source = ["src/{{cookiecutter.__package_name}}"]

[tool.coverage.report]
ignore_errors = false
show_missing = true
fail_under = 100
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self\\.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "AbstractMethodError",
    "@(abc\\.)?abstractmethod",
    ]

[tool.coverage.html]
directory = "coverage_html_report"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
